--- a/internal/pkg/app/demo/server/static/index.html
+++ b/internal/pkg/app/demo/server/static/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta
             name="description"
             content="SwaggerIU"
     />
     <title>SwaggerUI</title>
-    <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5.18.2/swagger-ui.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5.18.2/swagger-ui.css"/>
 </head>
 <body>
 <div id="swagger-ui"></div>
@@ -19,6 +19,7 @@
         window.ui = SwaggerUIBundle({
             url: '/openapi.yaml',
             dom_id: '#swagger-ui',
+            defaultModelsExpandDepth: -1
         });
     };
 </script>
